--- a/WindowsFormsApplication1/Properties/Resources.resx
+++ b/WindowsFormsApplication1/Properties/Resources.resx
@@ -536,7 +536,7 @@
     <value>Borrador</value>
   </data>
   <data name="ErrorNoExisteCodPublicacion" xml:space="preserve">
-    <value>No se ha podido encontrar un borrador para el código de publicación ingresado o el mismo no le pertenece.</value>
+    <value>El código ingresado no corresponde a ninguna publicación existente en el sistema o corresponde a una publicación generada por otro usuario.</value>
   </data>
   <data name="PrecioInvalido" xml:space="preserve">
     <value>El precio del producto debe ser mayor a 0.</value>
